# src/docs/swagger.json
@@ -5,6 +5,44 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/login": {
+            "post": {
+                "parameters": [
+                    {
+                        "description": "username",
+                        "name": "username",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "password",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "access_token",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "do ping",
@@ -40,12 +78,12 @@
                 "summary": "Add a new user",
                 "parameters": [
                     {
-                        "description": "Username to add",
-                        "name": "username",
+                        "description": "Username and hashed password",
+                        "name": "userInDB",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.UserInDB"
                         }
                     }
                 ],
@@ -77,6 +115,19 @@
                     }
                 ],
                 "responses": {}
+            }
+        }
+    },
+    "definitions": {
+        "models.UserInDB": {
+            "type": "object",
+            "properties": {
+                "hashed_password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
             }
         }
     }
